# GameOfLife

./: .gitignore  CMakeLists.txt  GameOfLife.sln  GameOfLife.vcproj  GameOfLife_Kernels.cl  README
cmake/: FindGLEW.cmake
common/: openclsdk_debug.vsprops  openclsdk_debug_x64.vsprops  openclsdk_release.vsprops  openclsdk_release_x64.vsprops
inc/: GameFile.hpp  GameOfLife.hpp  GameOfLifeMain.hpp  KernelFile.hpp  PatternFile.hpp  anyoption.h
inc/CL/: cl_fixed.hpp
patterns/breeders/: c4-diag-switch-engines.rle  replicator.rle  replicator2.rle  sierpinksi-triangle.rle  spacefiller.rle
patterns/calculations/: fermat_prime.rle
patterns/ocillators/: 10-cell-row.rle  3-cell-row.rle  glider-stream-crystal.rle
patterns/signal-circuitry/: Turing-Machine-3-state.rle  p46racetrack.rle
patterns/spaceships/: glider.rle
patterns/syntheses/: 109-still-lifes.rle  slow-salvo-eater-recipes.rle
src/: GameFile.cpp  GameOfLife.cpp  GameOfLifeMain.cpp  KernelFile.cpp  PatternFile.cpp  anyoption.cpp  kernels.cl  main.cpp
